--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="nl">
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="Irene">
+	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Frankenstein's lab</title>
-  <link rel="stylesheet" href="css/style.css">
+	
+	<title>Howdy FED2526</title>
+
+	<link href="styles/style.css" rel="stylesheet">
+
+	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
+
 <body>
-  
+	<h1>Howdy FED2526</h1>
+
+	<script defer src="scripts/script.js"></script>
 </body>
+	
 </html>
