--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Irene">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2526</title>
+	<title>Frankenstein's lab</title>
 
 	<link href="styles/style.css" rel="stylesheet">
 
