--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="author" content="Irene">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Frankenstein's lab</title>
+	<title>Frankenstein's Lab</title>
 
 	<link href="styles/style.css" rel="stylesheet">
 
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<h1>Howdy FED2526</h1>
+	<h1>Lab</h1>
 
 	<script defer src="scripts/script.js"></script>
 </body>
