--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 	<link href="styles/style.css" rel="stylesheet">
 
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+
+	<style>
+    	@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+  	</style>
+
 </head>
 
 <body>
-	<h1>Lab</h1>
-
-	<script defer src="scripts/script.js"></script>
-</body>
+	<header>
+		<img class = "lab_logo" src="images/Frankenstein.png" alt="Headshot of Frankenstein's monster" >
+		<h1>Laboratorium</h1>
+	</header>	
+	
 	
 </html>
